# property-management

./: .env  .pre-commit-config.yaml  README.md  docker-compose-dev.yml  main.py  openapi.json  pyproject.toml  technical_plan.md
migrations/: env.py
migrations/versions/: 1dd5c43376da_change_rent_value_from_float_to_decimal.py  3a4847653d4e_configuration_key_unique.py  9319f69a03c7_add_property_and_configuration_tables.py
property/: settings.py
property/application/: dtos.py  exceptions.py  mappers.py  services.py
property/domain/: enums.py  exceptions.py  filters.py  interfaces.py  models.py
property/infrastructure/postgres/: database.py  mappers.py  models.py  repositories.py  tables.py
property/presentation/: api.py  configuration_api.py  property_api.py  routes.py
tests/presentation/: conftest.py  test_configuration_api.py  test_property_api.py
tests/property/presentation/: conftest.py
